Added blue horizontal spanning strip for navbar. Kept the above section white for upper navbar

--- a/src/App.css
+++ b/src/App.css
@@ -44,9 +44,17 @@
   color: #888;
 }
 
-
-#persistent-navbar {
+#persistent-navbar-top {
   width: 100vw;
+  height: 41px;
   background-color: #FFFBFF;
   color: #0118D8;
+}
+
+#persistent-navbar-bottom {
+  width: 100vw;
+  background-color: #0118D8;
+  color: #FFFBFF;
+  height: 62px;
+  margin-bottom: 15px;
 }
