--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: #FFFBFF;
-  background-color: #0118D8;
+  color: #0118D8;
+  background-color: #FFFBFF;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -25,8 +25,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
