--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,11 @@
   height: 61px;
   background-color: #FFFBFF;
   color: #0118D8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 120;
+  font-size: 32px;
 }
 
 /* CSS to make the navbar -  below the top, white navbar - blue . */
@@ -66,7 +71,7 @@
 /* CSS to handle the positioning of the container holding 
    all elements of the left side of the blue navbar. */
 #blue-navbar-left {
-  margin-left: 350px;
+  margin-left: 300px;
   font-weight: 650;
 }
 
@@ -108,4 +113,10 @@
   color: #FFFBFF;
   position: fixed;
   bottom: 0;
+}
+
+.lets-go-arrow {
+  display: inline;
+  font-size: 20px;
+  font-weight: 550;
 }
